# molecular_vqe

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.streamlit/: config.toml
interfaces/: app.py
src/: classical_baseline.py  main.py  molecule_builder.py  plot_pes.py  quantum_solver.py
src/molecular_vqe/: __init__.py  classical_baseline.py  cli.py  molecule_builder.py  quantum_solver.py
