[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "molecular_vqe"
version = "0.1.0"
description = "A hybrid quantum-classical VQE solver for molecular ground state energies."
requires-python = ">=3.9"
dependencies = [
    "qiskit>=1.0.0",
    "qiskit-algorithms>=0.3.0",
    "qiskit-nature",
    "qiskit-ibm-runtime>=0.23.0",
    "pyscf",    "streamlit",
    "stmol",
    "py3Dmol",
    "streamlit",
    "ipython_genutils"
]



[project.scripts]
vqe-solve = "molecular_vqe.cli:main" 
